--- a/style/main.css
+++ b/style/main.css
@@ -334,30 +334,55 @@ hr {
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+  .tile.tile-6 .tile-inner {
+    color: #f9f6f2;
+    background: #f0c189; }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: #f2b179; }
-  .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
-    background: #f59563; }
-  .tile.tile-6 .tile-inner {
-    color: #f9f6f2;
-    background: #F0D7AE; }
   .tile.tile-10 .tile-inner {
     color: #f9f6f2;
-    background: #F2B180; }
+    background: #f3a371; }
   .tile.tile-12 .tile-inner {
     color: #f9f6f2;
-    background: #F2B192; }
+    background: #f59563; }
   .tile.tile-14 .tile-inner {
     color: #f9f6f2;
-    background: #F29F89; }
+    background: #f68461; }
+  .tile.tile-16 .tile-inner {
+    color: #f9f6f2;
+    background: #f67c5f; }
   .tile.tile-18 .tile-inner {
     color: #f9f6f2;
-    background: #F59551; }
+    background: #f65e3b; }
   .tile.tile-20 .tile-inner {
     color: #f9f6f2;
-    background: #D2A199; }
+    background: #edcf72;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286); }
+  .tile.tile-22 .tile-inner {
+    color: #f9f6f2;
+    background: #edcc61;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048); }
+  .tile.tile-24 .tile-inner {
+    color: #f9f6f2;
+    background: #edca51;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.35665), inset 0 0 0 1px rgba(255, 255, 255, 0.21479); }
+  .tile.tile-26 .tile-inner {
+    color: #f9f6f2;
+    background: #edc850;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381); }
+  .tile.tile-28 .tile-inner {
+    color: #f9f6f2;
+    background: #edc53f;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571); }
+  .tile.tile-30 .tile-inner {
+    color: #f9f6f2;
+    background: #edc336;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.51637), inset 0 0 0 1px rgba(255, 255, 255, 0.31902); }
+  .tile.tile-32 .tile-inner {
+    color: #f9f6f2;
+    background: #edc22e;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333); }
    .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: #000000; }
